test(CompiledSubGraphTest): refactor tests to use FileSystemSaver for checkpoint management
work on #407